Rename config variables

--- a/docs/tutorial/data_files/functions.conf
+++ b/docs/tutorial/data_files/functions.conf
@@ -30,9 +30,9 @@ chromHMM = function(feature) {
     else if(feature.get('Name')=='9_Het') { return 'darkgreen'; }
     else if(feature.get('Name')=='10_TssBiv') { return 'darkgreen'; }
     else if(feature.get('Name')=='11_BivFlnk') { return 'lightgreen'; }
-    else if(feature.get('Name')=='12_EnhBiv') { return 'grey'; }
-    else if(feature.get('Name')=='13_ReprPC') { return 'lightgrey'; }
-    else if(feature.get('Name')=='14_ReprPCWk') { return 'lightgrey'; }
-    else if(feature.get('Name')=='15_Quies') { return 'lightgrey'; }
+    else if(feature.get('Name')=='12_EnhBiv') { return 'purple'; }
+    else if(feature.get('Name')=='13_ReprPC') { return 'lightblue'; }
+    else if(feature.get('Name')=='14_ReprPCWk') { return 'salmon'; }
+    else if(feature.get('Name')=='15_Quies') { return 'lightgray'; }
     else return 'black';
   }
